refactor: update password template to use the same styling as home
The password input field was missing padding/margin entirely and this
made the whole page look out of place with the rest of the application.
Fixing this I noticed that the styling was not in sync with the other
components, a refactoring was the logical solution to this.

--- a/src/app/password/password.component.html
+++ b/src/app/password/password.component.html
@@ -1,103 +1,91 @@
-<div class="row justify-content-center">
-  <div class="col col-lg-10">
-    <div class="row g-0 justify-content-between">
-      <div class="col">
-        <img alt="Plane" data-id="planningLogo" src="assets/search.svg">
-        <h3 class="text-center d-none d-lg-block" data-id="planningText">{{ 'home.planning' | translate }}</h3>
-      </div>
-      <div class="col">
-        <img alt="Sicher" data-id="securityLogo" src="assets/lock.svg">
-        <h3 class="text-center d-none d-lg-block" data-id="securityText">{{ 'home.security' | translate }}</h3>
-      </div>
-      <div class="col">
-        <img alt="Vernetzt" data-id="networkingLogo" src="assets/calendar_network.svg">
-        <h3 class="text-center d-none d-lg-block" data-id="networkingText">{{ 'home.networking' | translate }}</h3>
-      </div>
+<div class="row g-0 justify-content-center">
+  <div class="col-11 col-lg-8">
+    <app-ad-icons></app-ad-icons>
+    <div class="row justify-content-center my-2 my-lg-4">
+      <h2 class="text-center" data-id="locked">
+        {{ 'password.locked' | translate }}
+      </h2>
+    </div>
+    <div class="row g-0 justify-content-center">
+      <form (ngSubmit)="onSubmit()" [formGroup]="passwordForm" class="col">
+        <div class="form-row justify-content-center">
+          <label class="col h3" data-id="enter" for="password">
+            {{ 'password.enter' | translate }}
+          </label>
+        </div>
+        <div class="form-row">
+          <div class="col invalid-message-highlight">
+            <input
+              aria-hidden="true"
+              autocomplete="off"
+              class="d-none"
+              id="hidden-username"
+              spellcheck="false"
+              tabindex="-1"
+              title="user"
+              type="text"
+              value=""
+            >
+            <input
+              (ngModelChange)="this.showIsInvalid = false;"
+              appAutoFocus
+              autocomplete="current-password"
+              class="form-control"
+              data-id="passwordInput"
+              formControlName="password"
+              id="password"
+              placeholder="{{ 'password.placeholder' | translate }}"
+              required
+              type="password"
+              aria-describedby="invalid"
+            >
+            @if (showIsInvalid && isInvalid) {
+              <div
+                class="invalid-message"
+                data-id="msgInvalid"
+                id="invalid"
+              >
+                <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+                {{ 'password.invalid' | translate }}
+              </div>
+            }
+          </div>
+        </div>
+        <div class="form-row justify-content-center mt-3">
+          <div class="col pt-3">
+            @if (!isAdmin) {
+              <button
+                [disabled]="passwordForm.invalid"
+                class="btn btn-secondary btn-submit w-100"
+                data-id="userButton"
+                type="submit"
+              >
+                <span class="icon-create-poll"></span>
+                {{ 'poll.participate' | translate }}
+                <img alt="{{ 'poll.participate' | translate }}"
+                     class="icon-create-poll"
+                     src="assets/icn_umfrage_erstellen.svg"
+                >
+              </button>
+            }
+            @if (isAdmin) {
+              <button
+                [disabled]="passwordForm.invalid"
+                class="btn btn-secondary btn-submit w-100"
+                data-id="adminButton"
+                type="submit"
+              >
+                <span class="icon-create-poll"></span>
+                {{ 'poll.edit' | translate }}
+                <img alt="{{ 'poll.edit' | translate }}"
+                     class="icon-create-poll"
+                     src="assets/icn_umfrage_erstellen.svg"
+                >
+              </button>
+            }
+          </div>
+        </div>
+      </form>
     </div>
   </div>
-</div>
-<div class="row mt-3 mt-lg-5">
-  <form (ngSubmit)="onSubmit()" [formGroup]="passwordForm" class="col">
-    <div class="form-row justify-content-center">
-      <div class="col">
-        <h2 class="text-center" data-id="locked">{{ 'password.locked' | translate }}</h2>
-        <label class="primary text-center w-100 h3" data-id="enter" for="password">
-          {{ 'password.enter' | translate }}
-        </label>
-      </div>
-    </div>
-    <div class="d-flex form-row justify-content-center mt-3">
-      <div class="col col-lg-8 invalid-message-highlight">
-        <input
-          aria-hidden="true"
-          autocomplete="off"
-          class="d-none"
-          id="hidden-username"
-          spellcheck="false"
-          tabindex="-1"
-          title="user"
-          type="text"
-          value=""
-        >
-        <input
-          (ngModelChange)="this.showIsInvalid = false;"
-          appAutoFocus
-          autocomplete="current-password"
-          class="form-control"
-          data-id="passwordInput"
-          formControlName="password"
-          id="password"
-          placeholder="{{ 'password.placeholder' | translate }}"
-          required
-          type="password"
-          aria-describedby="invalid"
-        >
-        @if (showIsInvalid && isInvalid) {
-          <div
-            class="invalid-message"
-            data-id="msgInvalid"
-            id="invalid"
-          >
-            <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
-            {{ 'password.invalid' | translate }}
-          </div>
-        }
-      </div>
-    </div>
-    <div class="d-flex form-row justify-content-center mt-3">
-      <div class="col col-lg-8 pt-3">
-        @if (!isAdmin) {
-          <button
-            [disabled]="passwordForm.invalid"
-            class="btn btn-secondary btn-submit w-100"
-            data-id="userButton"
-            type="submit"
-          >
-            <span class="icon-create-poll"></span>
-            {{ 'poll.participate' | translate }}
-            <img alt="{{ 'poll.participate' | translate }}"
-                 class="icon-create-poll"
-                 src="assets/icn_umfrage_erstellen.svg"
-            >
-          </button>
-        }
-        @if (isAdmin) {
-          <button
-            [disabled]="passwordForm.invalid"
-            class="btn btn-secondary btn-submit w-100"
-            data-id="adminButton"
-            type="submit"
-          >
-            <span class="icon-create-poll"></span>
-            {{ 'poll.edit' | translate }}
-            <img alt="{{ 'poll.edit' | translate }}"
-                 class="icon-create-poll"
-                 src="assets/icn_umfrage_erstellen.svg"
-            >
-          </button>
-        }
-      </div>
-    </div>
-  </form>
-    <app-ad-icons></app-ad-icons>
 </div>
