fix: layout issues

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -59,9 +59,9 @@
       Wichtige Bestandteile der Seite konnten nicht geladen werden. Bitte laden Sie die Seite neu!
     </ngb-toast>
   }
-  <main class="row g-0 py-4 justify-content-center" id="main">
+  <main class="row py-4 justify-content-center" id="main">
     <router-outlet></router-outlet>
   </main>
-  <div class="row g-0 d-none d-lg-flex" id="bottom-edge"></div>
+  <div class="row d-none d-lg-flex" id="bottom-edge"></div>
   <app-footer class="row justify-content-center py-2"></app-footer>
 </div>
