--- a/src/app/poll/poll.component.html
+++ b/src/app/poll/poll.component.html
@@ -388,7 +388,7 @@
               <div
                 class="col-3 d-inline-flex align-items-center justify-content-end text-right mr-4">
                 <img alt="" aria-hidden="true" class="circle-tag" src="assets/status_accepted.svg">
-                <div class="font-weight-bold voting-status-summary-added-participants" data-id="addedParticipation">
+                <div class="font-weight-bold voting-status-summary-added-participants pe-3" data-id="addedParticipation">
                   {{ formHelper.getNumberOfVotingsWithVotingStatusAcceptedOfAddedParticipant() | leadingZero: 2 }}
                 </div>
               </div>
