--- a/src/app/shared/components/poll-options/poll-options.component.html
+++ b/src/app/shared/components/poll-options/poll-options.component.html
@@ -3,8 +3,8 @@
     [formGroup]="formGroup"
     class="row g-0 justify-content-end justify-content-lg-around align-items-center align-self-center max-content"
   >
-    <div class="col col-sm-auto">
-      <div class="row g-0 justify-content-center min-content">
+    <div class="col">
+      <div class="row g-0 justify-content-center">
         <div class="col-auto">
           <label
             class="form-check-label"
@@ -32,8 +32,8 @@
         </div>
       </div>
     </div>
-    <div class="col col-sm-auto">
-      <div class="row g-0 justify-content-center min-content">
+    <div class="col">
+      <div class="row g-0 justify-content-center">
         <div class="col-auto">
           <label
             class="w-100 form-check-label"
@@ -61,8 +61,8 @@
         </div>
       </div>
     </div>
-    <div class="col col-sm-auto">
-      <div class="row g-0 justify-content-center min-content">
+    <div class="col">
+      <div class="row g-0 justify-content-center">
         <div class="col-auto">
           <label
             class="form-check-label"
