--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -9,11 +9,11 @@
     {{ 'poll.checkData' | translate }}
   </h2>
 </div>
-<div class="row">
+<div class="row px-3">
   <div class="col">
     <div class="row">
       <div class="col">
-        <div class="section-container mx-3">
+        <div class="section-container">
           <div class="p-3">
             <app-appointment-summary [appointment]="model" [showDeleteWarning]="true"></app-appointment-summary>
           </div>
