refactor: language select button
Now acts the same as other buttons:
- doesn't change color on hover/focus
- uses same outline

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
         <li class="d-inline-block" ngbDropdown placement="bottom-right">
           <label class="sr-only" id="language">{{ 'lang.language' | translate }}</label>
           <button
-            class="btn"
+            class="btn outline-primary"
             data-id="languageDropdown"
             ngbDropdownToggle
             title="{{ 'lang.language' | translate }}"
