--- a/src/styles.scss
+++ b/src/styles.scss
@@ -153,6 +153,10 @@ a {
   outline-offset: .25rem;
 }
 
+.btn.outline-primary {
+  border-color: $primary;
+}
+
 .section-container {
   background-color: white;
   border-radius: $border-radius;
