--- a/src/app/poll/poll.component.html
+++ b/src/app/poll/poll.component.html
@@ -154,7 +154,7 @@
                         <div class="col-2 d-flex align-items-center justify-content-center">
                           <button
                             (click)="formHelper.deleteParticipantForm()"
-                            class="btn btn-transparent btn-trash w-100 h-100 ml-auto mr-0"
+                            class="btn btn-transparent focus-outline btn-trash w-100 h-100 ml-auto mr-0"
                             data-id="deleteParticipantButton"
                             id="delete-new-participant"
                             type="button"
@@ -227,7 +227,7 @@
                           >
                             <button
                               (click)="formHelper.editParticipant(participant)"
-                              class="btn btn-transparent p-0 border-0"
+                              class="btn btn-transparent focus-outline p-0 border-0"
                               id="editButton-{{index}}"
                               type="button"
                             >
@@ -278,7 +278,7 @@
                           <div class="col-2 d-flex align-items-center justify-content-center">
                             <button
                               (click)="formHelper.deleteEditParticipant(participant)"
-                              class="btn btn-transparent btn-trash w-100 h-100 ml-auto mr-0"
+                              class="btn btn-transparent focus-outline btn-trash w-100 h-100 ml-auto mr-0"
                               data-id="deleteEditedParticipantButton"
                               id="delete-edit-participant"
                               type="button"
@@ -352,7 +352,7 @@
               <div class="d-flex justify-content-end">
                 <button
                   (click)="navigate(surveyLinkUser)"
-                  class="btn btn-transparent text-primary btn-with-image"
+                  class="btn btn-transparent focus-outline text-primary btn-with-image"
                   data-id="surveyLinkNavigate"
                   type="button"
                 >
