fix: td height for firefox

--- a/src/app/poll/poll.component.html
+++ b/src/app/poll/poll.component.html
@@ -245,7 +245,7 @@
                         </div>
                       </td>
                       @for (date of model.suggestedDates; track date) {
-                        <td class="height-1">
+                        <td class="td-full-height">
                           <div class="h-100 d-flex align-items-center">
                             <!--suppress HtmlUnknownTarget no inspection for this dynamic src path -->
                             <img
