fix: background-color when editing participant

--- a/src/app/poll/poll.component.scss
+++ b/src/app/poll/poll.component.scss
@@ -266,7 +266,7 @@ $poll-data-cell-invalid-message-min-height: 24px;
     width: 350px;
 
     &.name {
-      background: $toolbar-background-color;
+      background: $toolbar-background-color !important;
     }
 
     .invalid-message {
