--- a/src/app/shared/components/suggested-date/suggested-date.component.html
+++ b/src/app/shared/components/suggested-date/suggested-date.component.html
@@ -1,6 +1,6 @@
 <div class="row g-0 justify-content-center text-center suggested-date-container">
   <!-- column on the left or centered with start date and - for desktop resolutions - start and end time  -->
-  <div class="col-5 column">
+  <div class="col-5 column position-relative">
     <!-- start date -->
     <div>{{ date.startDate | date:'MMM': '': getLocale() | slice: 0:3 }}</div>
     <div class="day">{{ date.startDate | date:'dd': '': getLocale() }}</div>
@@ -15,7 +15,7 @@
     - on a desktop (lg+) device AND
     - if there's no end date  -->
     <div [ngClass]="{'d-lg-block': date.endTime && !date.endDate}" class="position-absolute d-none hyphen"
-         style="left: 26px; bottom: 8px;">-
+         style="left: 26px; bottom: 6px;">-
     </div>
     <div [ngClass]="{'d-lg-block': date.endTime && !date.endDate}"
          class="d-none">{{ date.endTime | date:'HH:mm': '': getLocale() }}
@@ -26,7 +26,7 @@
     <div class="col-auto align-self-center d-lg-none">
       <div class="ml-1 mr-2 d-inline-block date-time-divider"></div>
     </div>
-    <div class="col d-flex d-lg-none column">
+    <div class="col d-flex d-lg-none column position-relative">
       <div class="row g-0 align-self-center w-100">
         <div class="col">
           <div>{{ date.startTime | date:'HH:mm': '': getLocale() }}</div>
@@ -36,7 +36,7 @@
         </div>
       </div>
       @if (date.endTime) {
-        <div class="position-absolute d-lg-none hyphen" style="left: 19px; top: 13px;">
+        <div class="position-absolute d-lg-none hyphen" style="left: 29px; top: 15px;">
           -
         </div>
       }
