--- a/src/app/shared/components/suggested-date/suggested-date.component.html
+++ b/src/app/shared/components/suggested-date/suggested-date.component.html
@@ -1,4 +1,4 @@
-<div class="row g-0 justify-content-center text-center suggested-date-container">
+<div class="row g-0 mb-1 justify-content-center text-center suggested-date-container">
   <!-- column on the left or centered with start date and - for desktop resolutions - start and end time  -->
   <div class="col-5 column position-relative">
     <!-- start date -->
@@ -67,7 +67,7 @@
           {{ date.description }}
         </details>
       } @else {
-        <p>{{ date.description }}</p>
+        <span>{{ date.description }}</span>
       }
     </div>
   }
