--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="row g-0 justify-content-center">
   <div class="col-11 col-lg-8">
-    @if (!isProduction()) {
+    @if (isDev()) {
       <div class="row alert alert-warning" data-id="testBanner">
         {{ 'home.testEnvironmentBanner' | translate:derivateTitle }}
       </div>
