--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 @import "bootstrap/scss/functions";
 @import 'bootstrap/scss/bootstrap';
 @import 'bootstrap/scss/mixins';
+@import 'ngx-toastr/toastr';
 
 @font-face {
   font-family: Roboto;
